[package]
name = "traycom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"

[dependencies.windows]
version = "0.52"
features = [
    "Devices",
    "Devices_Enumeration",
    "Devices_SerialCommunication",
    "Foundation",
    "Foundation_Collections", 
    "Win32_Foundation",
    "Win32",
    "Win32_Devices",
    "Win32_Devices_Communication",
]
